[package]
name = "engine-style-parser"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false
description = "Rust parser and CSS Modules intermediate extractor for CSS/SCSS/Less modules"
repository = "https://github.com/omenien/omena-engine-style-parser"
readme = "README.md"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
