[package]
name = "omena-engine-style-parser"
version = "0.1.6"
edition = "2024"
license = "MIT"
description = "Parser and CSS Modules intermediate extractor for Omena CSS analysis"
repository = "https://github.com/omenien/omena-engine-style-parser"
readme = "README.md"
keywords = ["omena", "css-modules", "parser", "scss", "less"]
categories = ["development-tools", "parser-implementations"]
exclude = [".github/**"]

[lib]
name = "engine_style_parser"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
